# todoapi

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  httpietests.sh  pyproject.toml
src/: entrypoint.sh  httpietests.sh  schema.yml
src/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/todoapi/: asgi.py  settings.py  urls.py  wsgi.py
src/todos/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/todos/migrations/: 0001_initial.py  0002_rename_update_at_todo_updated_at_and_more.py
